set the number of featuremaps of the model parameterizable.

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" Check pytorch installation \"\"\"\n",
     "import torch\n",
@@ -26,45 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected device : cuda\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:build model\n",
-      "INFO:root:initialize loss and optimizer for a model predicting 1 classes\n",
-      "INFO:root:Epoch [1/10], Loss: 1.5675, Val Loss: 0.0692\n",
-      "INFO:root:Epoch 0, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [2/10], Loss: 0.0283, Val Loss: 0.0094\n",
-      "INFO:root:Epoch 1, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [3/10], Loss: 0.0015, Val Loss: 0.0086\n",
-      "INFO:root:Epoch 2, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [4/10], Loss: 0.0003, Val Loss: 0.0064\n",
-      "INFO:root:Epoch 3, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [5/10], Loss: 0.0002, Val Loss: 0.0082\n",
-      "INFO:root:Epoch 4, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [6/10], Loss: 0.0001, Val Loss: 0.0058\n",
-      "INFO:root:Epoch 5, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [7/10], Loss: 0.0001, Val Loss: 0.0058\n",
-      "INFO:root:Epoch 6, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [8/10], Loss: 0.0001, Val Loss: 0.0056\n",
-      "INFO:root:Epoch 7, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [9/10], Loss: 0.0001, Val Loss: 0.0055\n",
-      "INFO:root:Epoch 8, Learning Rate: 0.0005\n",
-      "INFO:root:Epoch [10/10], Loss: 0.0001, Val Loss: 0.0054\n",
-      "INFO:root:Epoch 9, Learning Rate: 0.0005\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" Train the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
     "import logging\n",
@@ -77,10 +30,11 @@
     "from src.benchmark.test import test\n",
     "\n",
     "NB_EPOCHS = 10\n",
-    "BATCH_SIZE = 8\n",
+    "BATCH_SIZE = 16\n",
     "IMG_WIDTH = 128\n",
     "IMG_HEIGHT = 128\n",
     "LEARNING_RATE = 0.0005\n",
+    "BASE_FM_NUMBER = 24\n",
     "\n",
     "MODEL_PATH = \"./square_model_dict.pth\"\n",
     "\n",
@@ -91,7 +45,7 @@
     "print(f\"Selected device : {device}\")\n",
     "\n",
     "# create model\n",
-    "model = UNetModel(3, 1)\n",
+    "model = UNetModel(3, 1, BASE_FM_NUMBER)\n",
     "\n",
     "# create datasets\n",
     "nb_images = 100\n",
@@ -111,7 +65,7 @@
    "outputs": [],
    "source": [
     "\"\"\" test the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
-    "model = UNetModel(3, 1).to(device)\n",
+    "model = UNetModel(3, 1, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
     "test_dataset = SquareDataset(3, IMG_WIDTH, IMG_HEIGHT, nb_images, 20, 80)\n",
     "\n",
