--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -53,9 +53,15 @@
     "validation_dataset = SquareDataset(3, IMG_WIDTH, IMG_HEIGHT, nb_images, 20, 80)\n",
     "hyperparameters = HyperParameters(NB_EPOCHS, BATCH_SIZE, LEARNING_RATE)\n",
     "\n",
-    "train(device, model, train_dataset, validation_dataset, hyperparameters)\n",
-    "\n",
-    "torch.save(model.state_dict(), MODEL_PATH)\n"
+    "train(\n",
+    "    device,\n",
+    "    model,\n",
+    "    MODEL_PATH, \n",
+    "    train_dataset,\n",
+    "    validation_dataset,\n",
+    "    hyperparameters,\n",
+    "    MODEL_PATH\n",
+    ")\n"
    ]
   },
   {
@@ -65,11 +71,79 @@
    "outputs": [],
    "source": [
     "\"\"\" test the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
+    "nb_images = 10 # test set of 10 images\n",
     "model = UNetModel(3, 1, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
     "test_dataset = SquareDataset(3, IMG_WIDTH, IMG_HEIGHT, nb_images, 20, 80)\n",
     "\n",
     "test(device, model, test_dataset, verbose=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" Train the model on a jsrt dataset composed of squares with different colors \"\"\"\n",
+    "import logging\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import torch\n",
+    "\n",
+    "from src.model.unet import UNetModel\n",
+    "from src.dataset.custom_image_mask_dataset import CustomImageMaskDataset\n",
+    "from src.benchmark.train import train, HyperParameters\n",
+    "from src.benchmark.test import test\n",
+    "\n",
+    "NB_EPOCHS = 50\n",
+    "BATCH_SIZE = 16\n",
+    "# IMG_WIDTH = 128\n",
+    "# IMG_HEIGHT = 128\n",
+    "LEARNING_RATE = 0.0005\n",
+    "BASE_FM_NUMBER = 24\n",
+    "NB_CLASSES = 4\n",
+    "\n",
+    "MODEL_PATH = \"./jsrt_model_dict.pth\"\n",
+    "\n",
+    "logging.basicConfig(filename=None, filemode=\"w\", level=logging.INFO)\n",
+    "\n",
+    "# select device for computation\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Selected device : {device}\")\n",
+    "\n",
+    "# create model\n",
+    "model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER)\n",
+    "\n",
+    "# create datasets\n",
+    "train_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\train'))\n",
+    "validation_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\val'))\n",
+    "hyperparameters = HyperParameters(NB_EPOCHS, BATCH_SIZE, LEARNING_RATE)\n",
+    "\n",
+    "train(\n",
+    "    device,\n",
+    "    model,\n",
+    "    MODEL_PATH,\n",
+    "    train_dataset,\n",
+    "    validation_dataset,\n",
+    "    hyperparameters,\n",
+    "    MODEL_PATH,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" test the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
+    "nb_images = 10 # test set of 10 images\n",
+    "model = model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER).to(device)\n",
+    "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
+    "test_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\test'))\n",
+    "\n",
+    "test(device, model, test_dataset, verbose=1)"
    ]
   }
  ],
