--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -56,7 +56,7 @@
     "train(\n",
     "    device,\n",
     "    model,\n",
-    "    MODEL_PATH, \n",
+    "    None, \n",
     "    train_dataset,\n",
     "    validation_dataset,\n",
     "    hyperparameters,\n",
@@ -106,6 +106,10 @@
     "\n",
     "MODEL_PATH = \"./jsrt_model_dict.pth\"\n",
     "\n",
+    "# deactivate PIL debug ifo polutting output...\n",
+    "pil_logger = logging.getLogger('PIL')\n",
+    "pil_logger.setLevel(logging.INFO)\n",
+    "\n",
     "logging.basicConfig(filename=None, filemode=\"w\", level=logging.INFO)\n",
     "\n",
     "# select device for computation\n",
@@ -123,7 +127,7 @@
     "train(\n",
     "    device,\n",
     "    model,\n",
-    "    MODEL_PATH,\n",
+    "    None,\n",
     "    train_dataset,\n",
     "    validation_dataset,\n",
     "    hyperparameters,\n",
@@ -137,33 +141,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import torch\n",
-    "\n",
-    "from src.model.unet import UNetModel\n",
-    "from src.dataset.custom_image_mask_dataset import CustomImageMaskDataset\n",
-    "from src.benchmark.train import train, HyperParameters\n",
-    "from src.benchmark.test import test\n",
-    "\n",
-    "NB_EPOCHS = 10\n",
-    "BATCH_SIZE = 16\n",
-    "# IMG_WIDTH = 128\n",
-    "# IMG_HEIGHT = 128\n",
-    "LEARNING_RATE = 0.0005\n",
-    "BASE_FM_NUMBER = 24\n",
-    "NB_CLASSES = 4\n",
-    "\n",
-    "MODEL_PATH = \"./jsrt_model_dict.pth\"\n",
-    "\n",
-    "logging.basicConfig(filename=None, filemode=\"w\", level=logging.INFO)\n",
-    "\n",
-    "# select device for computation\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(f\"Selected device : {device}\")\n",
-    "\n",
-    "\n",
     "\"\"\" test the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
     "nb_images = 10 # test set of 10 images\n",
     "model = model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER).to(device)\n",
