Add basic image data augmentation

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -93,6 +93,9 @@
     "\n",
     "from src.model.unet import UNetModel\n",
     "from src.dataset.custom_image_mask_dataset import CustomImageMaskDataset\n",
+    "from src.dataset.data_augmentation.color_augmentation import ColorimetricAugmentationParams\n",
+    "from src.dataset.data_augmentation.spatial_augmentation import SpatialAugmentationParams\n",
+    "from src.dataset.data_augmentation.augmented_semantic_segmentation import AugmentedSemanticSegmentationDataset\n",
     "from src.benchmark.train import train, HyperParameters\n",
     "from src.benchmark.test import test\n",
     "\n",
@@ -124,6 +127,14 @@
     "validation_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\val'))\n",
     "hyperparameters = HyperParameters(NB_EPOCHS, BATCH_SIZE, LEARNING_RATE)\n",
     "\n",
+    "# Add data augmentation\n",
+    "spatial_params = SpatialAugmentationParams()\n",
+    "colorimetric_params = ColorimetricAugmentationParams()\n",
+    "train_dataset = AugmentedSemanticSegmentationDataset(train_dataset, spatial_params, colorimetric_params)\n",
+    "validation_dataset = AugmentedSemanticSegmentationDataset(validation_dataset, spatial_params, colorimetric_params)\n",
+    "\n",
+    "\n",
+    "\n",
     "train(\n",
     "    device,\n",
     "    model,\n",
@@ -142,7 +153,6 @@
    "outputs": [],
    "source": [
     "\"\"\" test the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
-    "nb_images = 10 # test set of 10 images\n",
     "model = model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
     "test_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\test'))\n",
