add early stopping into the training loop

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -96,10 +96,10 @@
     "from src.dataset.data_augmentation.color_augmentation import ColorimetricAugmentationParams\n",
     "from src.dataset.data_augmentation.spatial_augmentation import SpatialAugmentationParams\n",
     "from src.dataset.data_augmentation.augmented_semantic_segmentation import AugmentedSemanticSegmentationDataset\n",
-    "from src.benchmark.train import train, HyperParameters\n",
+    "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams\n",
     "from src.benchmark.test import test\n",
     "\n",
-    "NB_EPOCHS = 10\n",
+    "NB_EPOCHS = 1000\n",
     "BATCH_SIZE = 16\n",
     "# IMG_WIDTH = 128\n",
     "# IMG_HEIGHT = 128\n",
@@ -125,7 +125,7 @@
     "# create datasets\n",
     "train_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\train'))\n",
     "validation_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\val'))\n",
-    "hyperparameters = HyperParameters(NB_EPOCHS, BATCH_SIZE, LEARNING_RATE)\n",
+    "hyperparameters = HyperParameters(NB_EPOCHS, BATCH_SIZE, LEARNING_RATE, EarlyStoppingParams(5, 0.001))\n",
     "\n",
     "# Add data augmentation\n",
     "spatial_params = SpatialAugmentationParams()\n",
