WIP : add evaluation metrics

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -19,17 +19,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Train the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
+    "\"\"\" Train the model on a synthetic dataset composed of squares with different colors (1-class problem) \"\"\"\n",
     "import logging\n",
     "\n",
     "import torch\n",
     "\n",
     "from src.model.unet import UNetModel\n",
     "from src.dataset.square_dataset import SquareDataset \n",
-    "from src.benchmark.train import train, HyperParameters\n",
+    "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams\n",
     "from src.benchmark.test import test\n",
     "\n",
-    "NB_EPOCHS = 10\n",
+    "NB_EPOCHS = 20\n",
     "BATCH_SIZE = 16\n",
     "IMG_WIDTH = 128\n",
     "IMG_HEIGHT = 128\n",
@@ -51,7 +51,9 @@
     "nb_images = 100\n",
     "train_dataset = SquareDataset(3, IMG_WIDTH, IMG_HEIGHT, nb_images, 20, 80)\n",
     "validation_dataset = SquareDataset(3, IMG_WIDTH, IMG_HEIGHT, nb_images, 20, 80)\n",
-    "hyperparameters = HyperParameters(NB_EPOCHS, BATCH_SIZE, LEARNING_RATE)\n",
+    "hyperparameters = HyperParameters(\n",
+    "    NB_EPOCHS, BATCH_SIZE, LEARNING_RATE, EarlyStoppingParams(3, 0.001)\n",
+    ")\n",
     "\n",
     "train(\n",
     "    device,\n",
@@ -70,13 +72,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" test the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
+    "\"\"\" test the model on a synthetic dataset composed of squares with different colors (1-class problem)\"\"\"\n",
+    "from src.benchmark.test import test, TestMetrics\n",
+    "\n",
+    "\n",
     "nb_images = 10 # test set of 10 images\n",
     "model = UNetModel(3, 1, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
     "test_dataset = SquareDataset(3, IMG_WIDTH, IMG_HEIGHT, nb_images, 20, 80)\n",
     "\n",
-    "test(device, model, test_dataset, verbose=1)\n"
+    "test(device, model, test_dataset, [TestMetrics.ACCURACY], verbose=1)\n"
    ]
   },
   {
@@ -85,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Train the model on a jsrt dataset composed of squares with different colors \"\"\"\n",
+    "\"\"\" Train the model on a jsrt dataset composed of Chest X-ray images (4-classes problem) \"\"\"\n",
     "import logging\n",
     "from pathlib import Path\n",
     "\n",
@@ -100,7 +105,7 @@
     "from src.benchmark.test import test\n",
     "\n",
     "NB_EPOCHS = 1000\n",
-    "BATCH_SIZE = 16\n",
+    "BATCH_SIZE = 8\n",
     "# IMG_WIDTH = 128\n",
     "# IMG_HEIGHT = 128\n",
     "LEARNING_RATE = 0.0005\n",
@@ -152,18 +157,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" test the model on a synthetic dataset composed of squares with different colors \"\"\"\n",
+    "\"\"\" test the model on the jsrt dataset composed of Chest X-ray images (4-classes problem)  \"\"\"\n",
+    "from src.benchmark.test import test, TestMetrics\n",
+    "\n",
+    "\n",
     "model = model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
     "test_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\test'))\n",
     "\n",
-    "test(device, model, test_dataset, verbose=1)"
+    "test(device, model, test_dataset, [TestMetrics.ACCURACY], verbose=1)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "u-net-pytorch-py3.12 (3.12.9)",
    "language": "python",
    "name": "python3"
   },
