make paths relative ones

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -92,6 +92,7 @@
    "source": [
     "\"\"\" Train the model on a jsrt dataset composed of Chest X-ray images (4-classes problem) \"\"\"\n",
     "import logging\n",
+    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "import torch\n",
@@ -112,7 +113,7 @@
     "BASE_FM_NUMBER = 24\n",
     "NB_CLASSES = 4\n",
     "\n",
-    "MODEL_PATH = \"./jsrt_model_dict.pth\"\n",
+    "MODEL_PATH = \"./jsrt_model_dict2.pth\"\n",
     "\n",
     "# deactivate PIL debug ifo polutting output...\n",
     "pil_logger = logging.getLogger('PIL')\n",
@@ -128,8 +129,13 @@
     "model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER)\n",
     "\n",
     "# create datasets\n",
-    "train_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\train'))\n",
-    "validation_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\val'))\n",
+    "current_dir = Path(os.getcwd())\n",
+    "train_dataset = CustomImageMaskDataset(\n",
+    "    current_dir.joinpath(r\"../data/JSRT-segmentation/train\")\n",
+    ")\n",
+    "validation_dataset = CustomImageMaskDataset(\n",
+    "    current_dir.joinpath(r\"../data/JSRT-segmentation/val\")\n",
+    ")\n",
     "hyperparameters = HyperParameters(NB_EPOCHS, BATCH_SIZE, LEARNING_RATE, EarlyStoppingParams(5, 0.001))\n",
     "\n",
     "# Add data augmentation\n",
@@ -160,12 +166,12 @@
     "\"\"\" test the model on the jsrt dataset composed of Chest X-ray images (4-classes problem)  \"\"\"\n",
     "from src.benchmark.test import test, TestMetrics\n",
     "\n",
-    "\n",
-    "model = model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER).to(device)\n",
+    "model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
-    "test_dataset = CustomImageMaskDataset(Path(r'D:\\user\\JB\\code\\u-net-pytorch\\data\\JSRT-segmentation\\test'))\n",
     "\n",
-    "test(device, model, test_dataset, [TestMetrics.ACCURACY], verbose=1)"
+    "test_dataset = CustomImageMaskDataset(current_dir.joinpath(r'../data/JSRT-segmentation/test'))\n",
+    "\n",
+    "test(device, model, test_dataset, [TestMetrics.ACCURACY], verbose=0)"
    ]
   }
  ],
