standardize the naming convention 'label'

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Train the model on a synthetic dataset composed of squares with different colors (1-class problem) \"\"\"\n",
+    "\"\"\" Train the model on a synthetic dataset composed of squares with different colors (1-label problem) \"\"\"\n",
     "import logging\n",
     "\n",
     "import torch\n",
@@ -27,7 +27,7 @@
     "from src.model.unet import UNetModel\n",
     "from src.dataset.square_dataset import SquareDataset \n",
     "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams\n",
-    "from src.benchmark.test import test\n",
+    "\n",
     "\n",
     "NB_EPOCHS = 20\n",
     "BATCH_SIZE = 16\n",
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" test the model on a synthetic dataset composed of squares with different colors (1-class problem)\"\"\"\n",
+    "\"\"\" test the model on a synthetic dataset composed of squares with different colors (1-label problem)\"\"\"\n",
     "from src.benchmark.test import test, TestMetrics\n",
     "\n",
     "\n",
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Train the model on a jsrt dataset composed of Chest X-ray images (4-classes problem) \"\"\"\n",
+    "\"\"\" Train the model on a jsrt dataset composed of Chest X-ray images (4-labels problem) \"\"\"\n",
     "import logging\n",
     "import os\n",
     "from pathlib import Path\n",
@@ -103,7 +103,6 @@
     "from src.dataset.data_augmentation.spatial_augmentation import SpatialAugmentationParams\n",
     "from src.dataset.data_augmentation.augmented_semantic_segmentation import AugmentedSemanticSegmentationDataset\n",
     "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams\n",
-    "from src.benchmark.test import test\n",
     "\n",
     "NB_EPOCHS = 1000\n",
     "BATCH_SIZE = 8\n",
@@ -111,7 +110,7 @@
     "# IMG_HEIGHT = 128\n",
     "LEARNING_RATE = 0.0005\n",
     "BASE_FM_NUMBER = 24\n",
-    "NB_CLASSES = 4\n",
+    "NB_LABELS = 4\n",
     "\n",
     "MODEL_PATH = \"./jsrt_model_dict2.pth\"\n",
     "\n",
@@ -126,7 +125,7 @@
     "print(f\"Selected device : {device}\")\n",
     "\n",
     "# create model\n",
-    "model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER)\n",
+    "model = UNetModel(1, NB_LABELS, BASE_FM_NUMBER)\n",
     "\n",
     "# create datasets\n",
     "current_dir = Path(os.getcwd())\n",
@@ -163,10 +162,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" test the model on the jsrt dataset composed of Chest X-ray images (4-classes problem)  \"\"\"\n",
+    "\"\"\" test the model on the jsrt dataset composed of Chest X-ray images (4-labels problem)  \"\"\"\n",
     "from src.benchmark.test import test, TestMetrics\n",
     "\n",
-    "model = UNetModel(1, NB_CLASSES, BASE_FM_NUMBER).to(device)\n",
+    "model = UNetModel(1, NB_LABELS, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
     "\n",
     "test_dataset = CustomImageMaskDataset(current_dir.joinpath(r'../data/JSRT-segmentation/test'))\n",
