new metric : f1-score

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -25,7 +25,7 @@
     "import torch\n",
     "\n",
     "from src.model.unet import UNetModel\n",
-    "from src.dataset.square_dataset import SquareDataset \n",
+    "from src.dataset.square_dataset import SquareDataset\n",
     "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams\n",
     "\n",
     "\n",
@@ -55,15 +55,7 @@
     "    NB_EPOCHS, BATCH_SIZE, LEARNING_RATE, EarlyStoppingParams(3, 0.001)\n",
     ")\n",
     "\n",
-    "train(\n",
-    "    device,\n",
-    "    model,\n",
-    "    None, \n",
-    "    train_dataset,\n",
-    "    validation_dataset,\n",
-    "    hyperparameters,\n",
-    "    MODEL_PATH\n",
-    ")\n"
+    "train(device, model, None, train_dataset, validation_dataset, hyperparameters, MODEL_PATH)\n"
    ]
   },
   {
@@ -76,7 +68,7 @@
     "from src.benchmark.test import test, TestMetrics\n",
     "\n",
     "\n",
-    "nb_images = 10 # test set of 10 images\n",
+    "nb_images = 10  # test set of 10 images\n",
     "model = UNetModel(3, 1, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
     "test_dataset = SquareDataset(3, IMG_WIDTH, IMG_HEIGHT, nb_images, 20, 80)\n",
@@ -101,7 +93,9 @@
     "from src.dataset.custom_image_mask_dataset import CustomImageMaskDataset\n",
     "from src.dataset.data_augmentation.color_augmentation import ColorimetricAugmentationParams\n",
     "from src.dataset.data_augmentation.spatial_augmentation import SpatialAugmentationParams\n",
-    "from src.dataset.data_augmentation.augmented_semantic_segmentation import AugmentedSemanticSegmentationDataset\n",
+    "from src.dataset.data_augmentation.augmented_semantic_segmentation import (\n",
+    "    AugmentedSemanticSegmentationDataset,\n",
+    ")\n",
     "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams\n",
     "\n",
     "NB_EPOCHS = 1000\n",
@@ -112,10 +106,10 @@
     "BASE_FM_NUMBER = 24\n",
     "NB_LABELS = 4\n",
     "\n",
-    "MODEL_PATH = \"./jsrt_model_dict2.pth\"\n",
+    "MODEL_PATH = \"./jsrt_model_dict.pth\"\n",
     "\n",
     "# deactivate PIL debug ifo polutting output...\n",
-    "pil_logger = logging.getLogger('PIL')\n",
+    "pil_logger = logging.getLogger(\"PIL\")\n",
     "pil_logger.setLevel(logging.INFO)\n",
     "\n",
     "logging.basicConfig(filename=None, filemode=\"w\", level=logging.INFO)\n",
@@ -129,20 +123,21 @@
     "\n",
     "# create datasets\n",
     "current_dir = Path(os.getcwd())\n",
-    "train_dataset = CustomImageMaskDataset(\n",
-    "    current_dir.joinpath(r\"../data/JSRT-segmentation/train\")\n",
+    "train_dataset = CustomImageMaskDataset(current_dir.joinpath(r\"../data/JSRT-segmentation/train\"))\n",
+    "validation_dataset = CustomImageMaskDataset(current_dir.joinpath(r\"../data/JSRT-segmentation/val\"))\n",
+    "hyperparameters = HyperParameters(\n",
+    "    NB_EPOCHS, BATCH_SIZE, LEARNING_RATE, EarlyStoppingParams(5, 0.001)\n",
     ")\n",
-    "validation_dataset = CustomImageMaskDataset(\n",
-    "    current_dir.joinpath(r\"../data/JSRT-segmentation/val\")\n",
-    ")\n",
-    "hyperparameters = HyperParameters(NB_EPOCHS, BATCH_SIZE, LEARNING_RATE, EarlyStoppingParams(5, 0.001))\n",
     "\n",
     "# Add data augmentation\n",
     "spatial_params = SpatialAugmentationParams()\n",
     "colorimetric_params = ColorimetricAugmentationParams()\n",
-    "train_dataset = AugmentedSemanticSegmentationDataset(train_dataset, spatial_params, colorimetric_params)\n",
-    "validation_dataset = AugmentedSemanticSegmentationDataset(validation_dataset, spatial_params, colorimetric_params)\n",
-    "\n",
+    "train_dataset = AugmentedSemanticSegmentationDataset(\n",
+    "    train_dataset, spatial_params, colorimetric_params\n",
+    ")\n",
+    "validation_dataset = AugmentedSemanticSegmentationDataset(\n",
+    "    validation_dataset, spatial_params, colorimetric_params\n",
+    ")\n",
     "\n",
     "\n",
     "train(\n",
@@ -168,9 +163,21 @@
     "model = UNetModel(1, NB_LABELS, BASE_FM_NUMBER).to(device)\n",
     "model.load_state_dict(torch.load(MODEL_PATH, weights_only=True))\n",
     "\n",
-    "test_dataset = CustomImageMaskDataset(current_dir.joinpath(r'../data/JSRT-segmentation/test'))\n",
+    "test_dataset = CustomImageMaskDataset(current_dir.joinpath(r\"../data/JSRT-segmentation/test\"))\n",
     "\n",
-    "test(device, model, test_dataset, [TestMetrics.ACCURACY], verbose=0)"
+    "test(\n",
+    "    device,\n",
+    "    model,\n",
+    "    test_dataset,\n",
+    "    [\n",
+    "        TestMetrics.ACCURACY,\n",
+    "        TestMetrics.RECALL_PER_LABEL,\n",
+    "        TestMetrics.PRECISION_PER_LABEL,\n",
+    "        TestMetrics.F1_SCORE_PER_LABEL,\n",
+    "        TestMetrics.IOU_PER_LABEL,\n",
+    "    ],\n",
+    "    verbose=0,\n",
+    ")"
    ]
   }
  ],
