WIP : fix linter issues

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "from src.model.unet import UNetModel\n",
     "from src.dataset.square_dataset import SquareDataset\n",
-    "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams\n",
+    "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams, TrainParameters\n",
     "\n",
     "\n",
     "NB_EPOCHS = 20\n",
@@ -37,6 +37,7 @@
     "BASE_FM_NUMBER = 24\n",
     "\n",
     "MODEL_PATH = \"./square_model_dict.pth\"\n",
+    "INIT_WEIGHTS_PATH = None\n",
     "\n",
     "logging.basicConfig(filename=None, filemode=\"w\", level=logging.DEBUG)\n",
     "\n",
@@ -55,7 +56,13 @@
     "    NB_EPOCHS, BATCH_SIZE, LEARNING_RATE, EarlyStoppingParams(3, 0.001)\n",
     ")\n",
     "\n",
-    "train(device, model, None, train_dataset, validation_dataset, hyperparameters, MODEL_PATH)\n"
+    "train(\n",
+    "    model,\n",
+    "    train_dataset,\n",
+    "    validation_dataset,\n",
+    "    TrainParameters(hyperparameters, INIT_WEIGHTS_PATH, device),\n",
+    "    MODEL_PATH,\n",
+    ")\n"
    ]
   },
   {
@@ -96,7 +103,7 @@
     "from src.dataset.data_augmentation.augmented_semantic_segmentation import (\n",
     "    AugmentedSemanticSegmentationDataset,\n",
     ")\n",
-    "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams\n",
+    "from src.benchmark.train import train, HyperParameters, EarlyStoppingParams, TrainParameters\n",
     "\n",
     "NB_EPOCHS = 1000\n",
     "BATCH_SIZE = 8\n",
@@ -107,6 +114,7 @@
     "NB_LABELS = 4\n",
     "\n",
     "MODEL_PATH = \"./jsrt_model_dict.pth\"\n",
+    "INIT_WEIGHTS_PATH = MODEL_PATH\n",
     "\n",
     "# deactivate PIL debug ifo polutting output...\n",
     "pil_logger = logging.getLogger(\"PIL\")\n",
@@ -141,14 +149,12 @@
     "\n",
     "\n",
     "train(\n",
-    "    device,\n",
     "    model,\n",
-    "    None,\n",
     "    train_dataset,\n",
     "    validation_dataset,\n",
-    "    hyperparameters,\n",
+    "    TrainParameters(hyperparameters, INIT_WEIGHTS_PATH, device),\n",
     "    MODEL_PATH,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -183,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "u-net-pytorch-py3.12 (3.12.9)",
+   "display_name": "torchsemanticsegmentation-py3.12 (3.12.9)",
    "language": "python",
    "name": "python3"
   },
